--- a/src/main/resources/templates/goPay.html
+++ b/src/main/resources/templates/goPay.html
@@ -9,31 +9,36 @@
     <link th:href="@{/css/default.css}" rel="stylesheet"/>
     <link rel="icon" th:href="@{/images/favicon.ico}" type="image/x-icon"/>
     <meta charset="UTF-8"/>
-    <title>商品列表</title>
+    <title>订单详情</title>
 </head>
 <body>
-    <div class="contentDiv">
+<div class="contentDiv">
+    <form action="goAlipay" method="post">
+        <input type="hidden" name="orderId" th:value="${order.id}" >
         <table class="table table-hover table-condensed">
             <legend>
-                <strong>商品列表</strong>
+                <strong>订单详情</strong>
             </legend>
             <thead>
             <tr>
-                <th>商品编号</th>
+                <th>订单编号</th>
                 <th>商品名称</th>
-                <th>价格(元)</th>
+                <th>订单价格(元)</th>
+                <th>购买个数</th>
             </tr>
             </thead>
             <tbody>
-            <tr th:each="product : ${productList}">
-                <th scope="row" th:text="${product.id}"></th>
+
+            <tr>
+                <th scope="row" th:text="${order.orderNum}"></th>
                 <td th:text="${product.name}"></td>
-                <td th:text="${product.price}"></td>
-                <td><a class="btn btn-primary" th:href="@{/alipay/goConfirm(productId=${product.id})}" role="button">购买</a></td>
-                <!--@{/book/delete/{bookId}(bookId=${book.id})}-->
+                <td th:text="${order.orderAmount}"></td>
+                <td th:text="${order.buyCounts}"></td>
+                <td><input type="submit"  value="前往支付宝进行支付"></td>
             </tr>
             </tbody>
         </table>
-    </div>
+    </form>
+</div>
 </body>
 </html>
