--- a/src/main/resources/templates/paySuccess.html
+++ b/src/main/resources/templates/paySuccess.html
@@ -9,31 +9,33 @@
     <link th:href="@{/css/default.css}" rel="stylesheet"/>
     <link rel="icon" th:href="@{/images/favicon.ico}" type="image/x-icon"/>
     <meta charset="UTF-8"/>
-    <title>商品列表</title>
+    <title>订单详情</title>
 </head>
 <body>
-    <div class="contentDiv">
+<div class="contentDiv">
+        <h1 style="color: green;">购买成功</h1>
         <table class="table table-hover table-condensed">
             <legend>
-                <strong>商品列表</strong>
+                <strong>订单详情</strong>
             </legend>
             <thead>
             <tr>
-                <th>商品编号</th>
-                <th>商品名称</th>
-                <th>价格(元)</th>
+                <th>订单编号</th>
+                <th>支付宝交易号</th>
+                <th>实付金额(元)</th>
+                <th>购买产品</th>
             </tr>
             </thead>
             <tbody>
-            <tr th:each="product : ${productList}">
-                <th scope="row" th:text="${product.id}"></th>
-                <td th:text="${product.name}"></td>
-                <td th:text="${product.price}"></td>
-                <td><a class="btn btn-primary" th:href="@{/alipay/goConfirm(productId=${product.id})}" role="button">购买</a></td>
-                <!--@{/book/delete/{bookId}(bookId=${book.id})}-->
+
+            <tr>
+                <th scope="row" th:text="${out_trade_no }"></th>
+                <td th:text="${trade_no }"></td>
+                <td th:text="${total_amount }"></td>
+                <td th:text="${productName }"></td>
             </tr>
             </tbody>
         </table>
-    </div>
+</div>
 </body>
 </html>
